--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
         <div class="divider"></div>
 
         <h3 class="capture">Junior Backend Developer</h3>
+        <p>&#128205; Местоположение: Москва, Россия (UTF+3)</p>
+
+        <div>
+          <ul>
+            <li class="contact-info">Email: alisar3@yandex.ru</li>
+            <li><a class="contact-info" href="https://github.com/molt0bene">GitHub</a></li>
+          </ul>
+        </div>
       </div>
 
       <div class="four columns">
-        <img src="image/my_photo.jpg" class="main-image" width="120" height="160" alt="Фото для резюме">
+        <img src="image/my_photo.jpg" class="main-image" width="120" alt="Фото для резюме">
       </div>
     </div>
 
@@ -69,12 +77,6 @@
           </li>
         </ul>
       </div>
-    </div>
-
-    <div class="wrapper">
-      <h2>Контакты</h2>
-
-      <p>Email: alisar3@yandex.ru</p>
     </div>
   </div>
 </body>
