--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="divider"></div>
 
         <h3 class="capture">Junior Backend Developer</h3>
-        <p>&#128205; Местоположение: Москва, Россия (UTF+3)</p>
+        <p>&#128205; Местоположение: Москва, Россия (GMT+3)</p>
 
         <div>
           <ul>
