--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="divider"></div>
 
-        <h3 class="capture">Junior Backend Developer</h3>
+        <h3 class="capture">Ruby on Rails Developer</h3>
         <p>&#128205; Местоположение: Москва, Россия (GMT+3)</p>
 
         <div>
