--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
         <div class="divider"></div>
 
         <h3 class="capture">Ruby on Rails Developer</h3>
-        <p>&#128205; Местоположение: Москва, Россия (GMT+3)</p>
 
-        <div>
-          <ul>
-            <li class="contact-info">Email: alisar3@yandex.ru</li>
-            <li><a class="contact-info" href="https://github.com/molt0bene">GitHub</a></li>
-          </ul>
+        <p class="contact-info">&#128205; Местоположение: Москва, Россия (GMT+3)</p>
+        <p class="contact-info">&#128235; Email: alisar3@yandex.ru</p>
+        <p class="contact-info">&#128187; Портфолио: <a href="https://github.com/molt0bene">GitHub</a></p>
+
         </div>
-      </div>
 
       <div class="four columns">
-        <img src="image/my_photo.jpg" class="main-image" width="120" alt="Фото для резюме">
+        <img src="image/square_photo.jpg" class="main-image" width="160" alt="Фото для резюме">
       </div>
     </div>
 
@@ -39,7 +36,7 @@
       <h2>Образование</h2>
 
       <div class="ten columns">
-        <ul>
+        <ul class="list-points">
           <li>Бакалавриат: НИТУ МИСиС (2021-...)<br>
             Информатика и вычислительная техника</li>
         </ul>
@@ -50,8 +47,8 @@
       <h2>Навыки</h2>
 
       <div class="ten columns">
-        <ul>
-          <li>Знание языков программирования Ruby, Python, Java</li>
+        <ul class="list-points">
+          <li>Знание языков программирования Ruby, Python, Java, C++</li>
           <li>Знание фреймворка Ruby on Rails</li>
           <li>Знание HTML, CSS</li>
           <li>Умение работать с базами данных</li>
@@ -65,7 +62,7 @@
       <h2>Доп. образование</h2>
 
       <div class="ten columns">
-        <ul>
+        <ul class="list-points">
           <li>Яндекс.Лицей (2017-2018)</li>
           <li>Курс «Программирование и анализ данных на Python»<br>
             ФКН НИУ ВШЭ (2020-2021)</li>
