projects section added

--- a/index.html
+++ b/index.html
@@ -75,6 +75,23 @@
         </ul>
       </div>
     </div>
+
+    <div class="wrapper row">
+      <h2>Проекты</h2>
+
+      <div class="ten columns">
+        <ul class="list-points">
+          <li><a href="https://github.com/molt0bene/hangman">Консольная игра «Виселица»</a></li>
+          Программа имитирует традиционную версию игры «Виселица» и позволяет пользователю сыграть
+          против компьютера. <br /><br />
+
+          <li><a href="https://github.com/molt0bene/what_to_watch_film">«Фильм на вечер»</a></li>
+          Эта программа рекомендует фильм, используя гем Nokogiri для парсинга HTML. Она считывает данные
+          со страницы, содержащей подборку фильмов, читает их режиссеров и предлагает пользователю выбрать одного
+          из них. Затем, на основе выбора, программа выводит в консоль случайный фильм этого режиссера.
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 </html>
